2001-05-26  James LewisMoss  <jimdres@mindspring.com>

	* src/gnome/new-user-funs.c (gnc_new_user_dialog_is_new_user): new
	func to test is new user.
	(gnc_ui_show_new_user_window): add arg for new user or not.
	(gnc_ui_show_new_user_choice_window): call
	gnc_ui_show_new_user_window with one argument saying it is a new
	user call.

	* src/gnome/new-user-callbacks.c (cancel_everything_out): new func
	extracting out shared functionality.
	(on_accountChooseDruidPage_cancel): add check to only pop up
	cancel dialog for new user stuff.

	* src/FileDialog.c (gncFileNew): call gnc_ui_show_new_user_window
	with one argument saying it isn't new user call.

	* src/gnome/new-user-callbacks.c
	(on_newAccountTypesList_select_row): deal with change in the text
	setting to a label rather than a gtktext.
	(on_newAccountTypesList_unselect_row): same.

	* Makefile.am (TAGS): ignore debian dir.

2001-05-26  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-acct-tree.c: fix label alignment

	* src/gnome/window-report.c: fix label alignment

	* src/gnome/window-main.c: put child menu after tools menu

2001-05-25  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-column-view.c (gnc_column_view_edit_size_cb):
	fix bug

	* src/scm/report/transaction-report.scm: default to sign-reverse
	credit accounts. fix i18n bug.

	* src/doc/design/engine.texinfo: update docs

	* configure.in: add Norwegian to list of translations

	* AUTHORS: add credits

	* doc/sgml/C/xacc-about.sgml: add credits

2001-05-25  Christian Stimming  <stimming@tuhh.de>

	* po/no.po: Kjartan Maraas' Norwegian updated translation.

	* src/gnome/gnc-html-guppi.c (gnc_has_guppi_version): generalized
	this function for arbitrary Guppi versions. Tried to enable
	barchart axis-labels for CVS Guppi but this gives nothing but
	segfaults. Shit.

2001-05-25  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/account-summary.scm: fix bug

	* src/gnome/window-main.c: add close window button to toolbar
